@@ -11,10 +11,11 @@
 
     <h1>Context Help: Trips</h1>
 
-    <p><b>Trips</b> are an OpenFlights feature for grouping together multiple flights across many airlines.  Trips can be filtered and viewed separately in the statistics, and you can also share trips with others.  You can even link your website, blog, FlyerTalk trip report etc to your OpenFlights trip.</p><br>
+    <p><b>Trips</b> are an OpenFlights feature for grouping together multiple flights across many airlines.  Trips can be filtered and viewed separately in the statistics, and you can also share trips with others.  You can even link your website, blog, FlyerTalk trip report etc to your OpenFlights trip.</p>
 
       <p><i>Example</i>: You went on a trip all around Europe, and now you want to share a map that shows <i>only</i> your Europe flights with your friends.</p>
       <ol>
+	<li>Select <b>New flight</b> and switch to <b>Detailed</b> mode.</li>
 	<li>Enter the first flight and click on <img src="/img/icon_add.png" height=17 width=17> next to <b>Trip</b> to create your new trip.</li>
 	<li>Your new trip now appears in the <b>Trip</b> pulldown.  Add the flight.</li>
 	<li>Add your other flights.  As long as your new trip is selected in the pulldown, they will be added to the trip.</li>
