@@ -47,7 +47,7 @@ $flight2 = array('param' => 'EDIT',
 		'src_apid' => '2000',
 		'dst_apid' => '2001',
 		'alid' => '2000',
-		'duration' => '2:00',
+		'duration' => '02:00',
 		'distance' => '1000',
 		'number' => 'CD456',
 		'seat' => '34B',
