@@ -1,3 +1,11 @@
+<b>2009-02-22</b>
+
+* "Analyze" now includes count of countries, avg length, duration
+* php/stats.php partly JSON-ified
+* "Trip" filter prominence reduced
+* Clearer "Help" icons
+* "X" icon now OpenFlights Purple(tm)
+
 <b>2009-02-09</b>
 
 * Facebook app now includes a map of flights
